monitoring/ntfy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ntfy
  namespace: ntfy
  labels:
    app: ntfy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ntfy
  template:
    metadata:
      labels:
        app: ntfy
    spec:
      enableServiceLinks: false
      automountServiceAccountToken: false
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: ntfy
          image: binwiederhier/ntfy:v2.29.0
          imagePullPolicy: IfNotPresent
          args: ["serve"]
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            seccompProfile:
              type: "RuntimeDefault"
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - name: ntfy
              mountPath: /var/cache/ntfy
              subPath: cache

            - name: ntfy
              mountPath: /etc/ntfy
              subPath: data
          readinessProbe:
            httpGet:
              path: /v1/health
              port: 80
            initialDelaySeconds: 45
            periodSeconds: 15
          livenessProbe:
            httpGet:
              path: /v1/health
              port: 80
            initialDelaySeconds: 45
            periodSeconds: 15
            failureThreshold: 3
      volumes:
        - name: ntfy
          persistentVolumeClaim:
            claimName: ntfy-pvc
